--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,23 +1,9 @@
 hibernate.connection.driver_class = org.h2.Driver
 hibernate.connection.url = jdbc:h2:file:./h2db.data
+hibernate.dialect = org.hibernate.dialect.H2Dialect
 
-#MySql config
-#hibernate.connection.driver_class = com.mysql.jdbc.Driver
-#hibernate.connection.url = jdbc:mysql://localhost:3306/example?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
-
-#Oracle Config, you will need to add oracle driver dependncy, 
-#checkout, option 4(System Path): https://www.mkyong.com/maven/how-to-add-oracle-jdbc-driver-in-your-maven-local-repository/
-
-#hibernate.connection.driver_class = oracle.jdbc.driver.OracleDriver
-#hibernate.connection.url = jdbc:oracle:thin:@localhost:1521/orclpdb1
-#hibernate.c3p0.preferredTestQuery=SELECT 1 FROM DUAL
-
-hibernate.connection.username=root
-hibernate.connection.password=123456
-hibernate.c3p0.min_size=1
-hibernate.c3p0.max_size=4
-hibernate.c3p0.timeout=3
-hibernate.c3p0.max_statements=50
+hibernate.connection.username=sa
+hibernate.connection.password=sa
 
 hibernate.hbm2ddl.auto=update
 db-entities-packages=com.app
