--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,12 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<version>7.0.0</version>
-	<artifactId>jk-framework-web-jpa-example</artifactId>
-	<packaging>war</packaging>
 	<parent>
 		<groupId>com.jalalkiswani</groupId>
 		<artifactId>jk-webapp</artifactId>
-		<version>7.0.0-SNAPSHOT</version>
+		<version>7.0.0-M1</version>
 	</parent>	
+	<artifactId>jk-framework-web-jpa-example</artifactId>
+	<packaging>war</packaging>
 
 </project>
